# raytracer

./: .gitignore  CMakeLists.txt  README.md
images/: image10.ppm  image11.ppm  image12.ppm  image13.ppm  image14.ppm  image3.ppm  image4.ppm  image5.ppm  image7.ppm  image8.ppm  image9.ppm
source/: camera.h  colour.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  ray.h  sphere.h  utils.h  vec3.h
